--- a/src/app/emprestimo/emprestimo.devolucao.component.html
+++ b/src/app/emprestimo/emprestimo.devolucao.component.html
@@ -284,6 +284,7 @@
         <div class="col-md-12 d-flex justify-content-end">
           <button type="submit"
                   class="mr-1 text-uppercase"
+                  (click)="dialogDuplicaItem = false"
                   mat-button>Cancelar
           </button>
           <button type="submit"
