--- a/src/app/notAuthorized/notAuthorized.component.html
+++ b/src/app/notAuthorized/notAuthorized.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="shadow"></div>
 
-    <h1>403! :X</h1>
+    <h1>Status 403...</h1>
     <p>
       Você não possui autorização
       <br />
