--- a/src/styles.css
+++ b/src/styles.css
@@ -136,3 +136,19 @@ mat-row:nth-child(even) {
   background-color: transparent !important;
   color: #000000 !important;
 }
+
+
+.abbreviate {
+  width: 90% !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+}
+
+.autocomplete-separator-field {
+  border-left: 1px solid #CCC;
+  display: inline-block;
+  padding-left: 10px;
+  margin-left: 10px;
+  min-width: 50px;
+}
